fix deprecation warnings (#288)